lab_k8s/lab10/my-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  labels:
    component: web
    app: my-app

spec:
  replicas: 3

  selector: 
    matchLabels:
      component: web
      app: my-app
  
  template:
    metadata:
      name: my-nginx-pod
      labels:
        component: web
        app: my-app
    spec:
      containers:
        - name: my-nginx-container
          image: nginx:alpine
