lab_k8s/lab10/my-nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-clusterip

spec:
  type: ClusterIP
  
  selector:
    component: web
    app: my-app
  
  ports:
    - port: 80
      targetPort: 80
