lab_k8s/lab10/my-nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-node-port

spec:
  type: NodePort

  selector:
    component: web
    app: my-app

  ports:
    - port: 80
      targetPort: 80 
      nodePort: 31001
