lab_k8s/lab10/mybackendlb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-clusterip

spec:
  type: ClusterIP
  
  selector:
    component: backend
    app: my-app
  
  ports:
    - port: 5000
      targetPort: 5000
