lab_k8s/lab10/mybackendlb-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-node-port

spec:
  type: NodePort
  
  selector:
    component: backend
    app: my-app
  
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31000
